<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCallOrSendMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text=""
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvAddToContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Add to Contacts"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Copy"
        android:textSize="14sp" />

</LinearLayout>