...
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_contact_support_24" />

        <TextView
            android:id="@+id/tvHotlineContactLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/ivContactAvatar"
            android:text="Hotline Number" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHotlineContactLabel"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/ivContactAvatar"
            android:text="1800 667700" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvNumber"
...
